Fixed bugs and updated features

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boillerplate") %>
+<%- layout('/layouts/boillerplate') %>
 
     <!-- <h3>All Listings</h3> -->
 
@@ -105,4 +105,3 @@
       });
     </script>
 
-   
