--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boillerplate") %>
+<%- layout("/layouts/boillerplate") %>
 
 <div class="row">
     <h1 class="col-6 offset-2">SignUp on Wanderlust</h1>
