--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boillerplate") %>
+<%- layout("/layouts/boillerplate") %>
 <div class="row">
     <div class="col-8 offset-2">
         <h1>Edit your Listing</h1>
