--- a/views/listings/error.ejs
+++ b/views/listings/error.ejs
@@ -1,7 +1,7 @@
-<% layout("/layouts/boillerplate") %>
+<%- layout("/layouts/boillerplate") %>
 <div class="row mt-3" >
     <div class="alert alert-danger col-6 offset-3" role="alert">
       <h4 class="alert-heading"><%= err.message %></h4>
       <p><%= err.stack %></p>
-      </div>
+    </div>
 </div>
