--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boillerplate") %>
+<%- layout("/layouts/boillerplate") %>
 
 <div class="row  mt-3">
     <div class="col-8 offset-3">
