--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -12,7 +12,7 @@
                   type="text " 
                   class="form-control"required>
                       <div class="mb-3">
-                    <label for="password" class="form-label"> password</label>
+                    <label for="password" class="form-label"> Password</label>
                     <input 
                       name="password"
                       id="password"
