--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -21,7 +21,7 @@
                       class="form-control"required>
                  </div>
                       <div class="mb-3">
-                    <label for="password" class="form-label"> password</label>
+                    <label for="password" class="form-label"> Password</label>
                     <input 
                       name="password"
                       id="password"
